lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:7: error: type mismatch;
 found   : lessons.lander.universe.Point
 required: Int
			Segment(0)=Liste(i)
                                        ^Lander:8: error: type mismatch;
 found   : lessons.lander.universe.Point
 required: Int
			Segment(1)=Liste(i+1)
                                        ^Lander:20: error: not found: value setAngleDesiree
			setAngleDesiree(getAngle-sens*5)
                        ^Lander:22: error: type mismatch;
 found   : Unit
 required: Array[Int]
		while ((getX<Segment(0)+1) || (getX>Segment(1)-1)) {
                ^Lander:18: error: type mismatch;
 found   : Unit
 required: Array[Int]
	if (sens !=0) {
        ^